# tui

./: Cargo.toml  README.md  config.json  mcp.txt
combine-txt/: src.txt  target.txt
src/: app.rs  args.rs  command.rs  completion.rs  config.rs  event.rs  lib.rs  main.rs  mcp.rs  mode.rs  state.rs  tool_formatter.rs  ui.rs
