[package]
name = "thi"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.1"

[lib]
name = "mcp_client"
path = "src/lib.rs"

[[bin]]
name = "mcp-client"
path = "src/main.rs"
